--- a/webapps/TMJRock/eg10.html
+++ b/webapps/TMJRock/eg10.html
@@ -29,13 +29,15 @@ bottom:0;
 right:0;
 margin:auto;
 border:2px solid white;
-overflow:auto;
 }
 .closeButton
 {
 float:right;
 padding:2px 7px;
 cursor:pointer;
+margin-right:5px;
+margin-top:5px;
+font-size:14pt;
 }
 
 </style>
@@ -62,7 +64,6 @@ break;
 if(modal==null) return;
 modal.show();
 }
-
 
 //foll. is a class
 function Modal(cref)	//cref = content reference
@@ -93,63 +94,116 @@ var modalMaskDivision = document.createElement("div");
 modalMaskDivision.classList.add("modalMaskDivision");
 
 //lect 75 starts
+var headerDivision = document.createElement("div");
+headerDivision.style.background="red";
+headerDivision.style.right="0";
+headerDivision.style.height="40px";
+headerDivision.style.padding="5px";
+modalMaskDivision.appendChild(headerDivision);
+
 if(contentReference.hasAttribute("size"))
 {
 var sz = contentReference.getAttribute("size");
+dimensions = sz.split("x");
+if(dimensions.length!=2) throw "In case of modal, specify size as 'widthxheight' only";
+modalMaskDivision.style.width = dimensions[0] + "px";
+modalMaskDivision.style.height = dimensions[1] + "px";
+}
+else
+{
+modalMaskDivision.style.width="300px";
+modalMaskDivision.style.height="300px";
 }
 if(contentReference.hasAttribute("header"))
 {
 var hd = contentReference.getAttribute("header");
+headerDivision.innerHTML=hd;
 }
-if(contentReference.hasAttribute("footer"))
-{
-var ft = contentReference.getAttribute("footer");
-}
+
 if(contentReference.hasAttribute("maskColor"))
 {
 var mkc = contentReference.getAttribute("maskColor");
+modalMaskDivision.style.background = mkc;
 }
 if(contentReference.hasAttribute("modalBackgroundColor"))
 {
 var mbc = contentReference.getAttribute("modalBackgroundColor");
+modalMaskDivision.style.background = mbc;
 }
-if(contentReference.hasAttribute("onOpen"))
+
+var contentDivision = document.createElement("div");
+contentDivision.style.height = (modalMaskDivision.style.height.substring(0,modalMaskDivision.style.height.length-2)-130)+"px";
+contentDivision.style.width = "98%";
+contentDivision.style.overflow="auto";
+contentDivision.style.padding="5px";
+contentReference.remove();
+contentDivision.appendChild(contentReference);
+modalMaskDivision.appendChild(contentDivision);
+
+var footerDivision = document.createElement("div");
+footerDivision.style.background="pink";
+footerDivision.style.left="0";
+footerDivision.style.right="0";
+footerDivision.style.height="40px";
+footerDivision.style.position="absolute";
+footerDivision.style.bottom="0";
+footerDivision.style.padding="5px";
+modalMaskDivision.appendChild(footerDivision);
+
+if(contentReference.hasAttribute("footer"))
 {
-var oo = contentReference.getAttribute("onOpen");
-alert(oo);
-alert(typeof oo);
-eval(oo);
-k="c=10+20";
-alert(k);
-eval(k);
-alert(c);
+var ft = contentReference.getAttribute("footer");
+footerDivision.innerHTML = ft;
 }
 
-
-
-//lect 75 end
-
-var closeButtonSpan = document.createElement("span");
+var closeButtonSpan =null;
+if(contentReference.hasAttribute("closeButton"))
+{
+var cb = contentReference.getAttribute("closeButton");
+if(cb.toUpperCase()=="TRUE")
+{
+closeButtonSpan = document.createElement("span");
 closeButtonSpan.classList.add("closeButton");
 var closeButtonMarker = document.createTextNode("x");
 closeButtonSpan.appendChild(closeButtonMarker);
-modalMaskDivision.appendChild(closeButtonSpan);
+headerDivision.appendChild(closeButtonSpan);
+}
+}
 
-contentReference.remove();
-modalMaskDivision.appendChild(contentReference);
+if(contentReference.hasAttribute("onOpen"))
+{
+var oo = contentReference.getAttribute("onOpen");
+this.onOpen=oo;
+}
+if(contentReference.hasAttribute("onClose"))
+{
+var oc = contentReference.getAttribute("onClose");
+this.onClose=oc;
+}
+
+//lect 75 end
 
 this.show = function(){
 document.body.appendChild(modalMask);
 document.body.appendChild(modalMaskDivision);
-if(this.onOpen) this.onOpen();
+if(this.onOpen) 
+{
+setTimeout(function(){eval(objectAddress.onOpen);},100);
+}
 };
 
-
+if(closeButtonSpan!=null)
+{
 closeButtonSpan.onclick = function(){
 modalMask.remove();
 modalMaskDivision.remove();
-if(objectAddress.onClose) objectAddress.onClose();
+if(objectAddress.onClose) 
+{
+setTimeout(function(){eval(objectAddress.onClose);},100);
+}
+
 };
+}
 
 modalMask.onclick = function(){
 closeButtonSpan.click();
@@ -204,7 +258,7 @@ Create First Modal
 Create Second Modal
 </button>
 
-<div id='ab' forModal="true" size="200x300" header="Some header" footer="Some footer" maskColor="#3355ff" modalBackgroundColor="#549933" closeButton="false" onOpen=abOpened onClose=abClosed>
+<div id='ab' forModal="true" size="200x300" header="Some header" footer="Some footer" maskColor="#3355ff" modalBackgroundColor="#549933" closeButton="true" onOpen="abOpened()" onClose="abClosed()">
 God is great
 </div>
 <div id='pq' forModal="true">
