--- a/webapps/TMJRock/backup/eg13.html
+++ b/webapps/TMJRock/backup/eg13.html
@@ -129,7 +129,7 @@ row.remove();
 //add new entries
 var startFromIndex = (this.pageNumber - 1) * this.pageSize;
 var endAtIndex = startFromIndex + this.pageSize - 1;
-if(endAtIndex >  this.students.length) endAtIndex = this.students.length - 1;
+if(endAtIndex >=  this.students.length) endAtIndex = this.students.length - 1;	//length is 1 based, endAtIndex is 0 based
 
 var tr;
 var td;
