--- a/webapps/TMJRock/eg13.html
+++ b/webapps/TMJRock/eg13.html
@@ -106,7 +106,7 @@ this.paginationTableId = paginationTableId;
 this.students = students;
 this.pageSize = pageSize;
 
-this.pageNumber = 57;
+this.pageNumber = 1;
 this.numberOfPaginationControls = 5;
 
 this.update();
@@ -118,18 +118,12 @@ update()
 var dataTable = document.getElementById(this.dataTableId);
 
 //first remove old entries if any
-var rows = dataTable.querySelectorAll("tr");	// returns a static NodeList		//var rows = dataTable.getElementsByTagName("tr");    returns a live-HTML Collection object
-var row;
-for(var k=0;k<rows.length;k++)
-{
-row = rows[k];
-row.remove();
-}
+while(dataTable.rows.length!=0) dataTable.deleteRow(0);
 
 //add new entries
 var startFromIndex = (this.pageNumber - 1) * this.pageSize;
 var endAtIndex = startFromIndex + this.pageSize - 1;
-if(endAtIndex >  this.students.length) endAtIndex = this.students.length - 1;
+if(endAtIndex >=  this.students.length) endAtIndex = this.students.length - 1;	//length is 1 based, endAtIndex is 0 based
 
 var tr;
 var td;
@@ -159,6 +153,13 @@ dataTable.appendChild(tr);
 }
 updatePagination()
 {
+function createPageChangeFunction(objectAddress,newPageNumber)
+{
+return function(){
+objectAddress.setGridPageNumber(newPageNumber);
+};
+}
+
 var paginationTable = document.getElementById(this.paginationTableId);
 
 
@@ -190,9 +191,8 @@ if(startFrom>1)
 {
 td = document.createElement("td");
 anchor = document.createElement("a");
-anchor.onclick = function(){
-model.grid.setGridPageNumber(startFrom-1);
-};
+anchor.onclick = createPageChangeFunction(this,startFrom-1);
+anchor.href='javascript:void(0)';
 anchor.innerHTML = "prev";
 td.appendChild(anchor);
 tr.appendChild(td);
@@ -202,9 +202,8 @@ for(let i=startFrom;i<=endAt;i++)
 {
 td = document.createElement("td");
 anchor = document.createElement("a");
-anchor.onclick = function(){
-model.grid.setGridPageNumber(i);
-};
+anchor.onclick = createPageChangeFunction(this,i);
+anchor.href='javascript:void(0)';
 if(this.pageNumber==i) anchor.innerHTML = "<b>"+i+"</b>";
 else anchor.innerHTML = i;
 td.appendChild(anchor);
@@ -215,9 +214,8 @@ if(endAt<totalNumberOfPages)
 {
 td = document.createElement("td");
 anchor = document.createElement("a");
-anchor.onclick = function(){
-model.grid.setGridPageNumber(endAt+1);
-};
+anchor.onclick = createPageChangeFunction(this,endAt+1);
+anchor.href='javascript:void(0)';
 anchor.innerHTML = "next";
 td.appendChild(anchor);
 tr.appendChild(td);
@@ -230,6 +228,7 @@ setGridPageNumber(newPageNumber)
 this.pageNumber = newPageNumber;
 this.update();
 this.updatePagination();
+return false;		//returning false for function called by 'onclick' ensures that request is not sent for attribute of 'href'
 }
 
 } //end of Grid
@@ -265,7 +264,8 @@ student.nameOfFather = i + " Father";
 students.push(student);
 }
 
-model.grid = new Grid('dataTable','dataTablePagination',students,15);
+let pageSize = 20;
+model.grid = new Grid('dataTable','dataTablePagination',students,pageSize);
 
 
 }
