add eg6 to eg9 jQuery examples

--- a/webapps/jq/eg5.html
+++ b/webapps/jq/eg5.html
@@ -136,7 +136,7 @@ Cool stuff
 
 <form action='whatever'>
 Enter something <input type='text' id='nm'><br>
-<button id='button8' type='button'>(8) Click me</button>
+<button id='button8' type='submit'>(8) Click me</button>
 </form>
 <br><br>
 
